--- a/index.html
+++ b/index.html
@@ -7,8 +7,40 @@
     <title>pablo.energy</title>
 </head>
 <body>
-  pablo.energy<br>  
- ⚡️
+  pablo.energy  ⚡️
+  <hr>
+ <form name="contact" method="POST" data-netlify="true" action="success">
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>
+  </p>
+  <p>
+    <label>Message: <textarea name="message"></textarea></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
+
+<hr>
+
+<form name="fileForm" enctype="multipart/form-data" data-netlify="true" action="success.html">
+  <p>
+    <label>
+      <span>Name:</span>
+      <input name="name" type="text"/>
+    </label>
+  </p>
+  <p>
+    <label>
+      <span>Add file:</span>
+      <input name="file" type="file"/>
+    </label>
+  </p>
+  <button>Submit</button>
+</form>
+<p class="result"></p>
+<hr>
+
 
 </body>
 </html>
