--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
   pablo.energy  ⚡️
   <hr>
- <form name="contact" method="POST" data-netlify="true" action="success">
+ <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="success">
+  <p style="display:none">
+    <label>
+      Don’t fill this out if you’re human: <input name="bot-field" />
+    </label>
+  </p>
   <p>
     <label>Your Name: <input type="text" name="name" /></label>
   </p>
