--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pablo.energy</title>
+
+    <script data-goatcounter="https://pablo-energy.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
 </head>
 <body>
   pablo.energy  ⚡️
