--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link type="text/css" rel="stylesheet" href="assets/css/addons.css" />
     <link type="text/css" rel="stylesheet" href="web-archive/assets/web-archive.css" />
 
-    <script data-goatcounter="https://wazzzup.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script data-goatcounter="https://pablo-energy.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
   </head>
   <body>
