--- a/sundaysites/index.html
+++ b/sundaysites/index.html
@@ -8,6 +8,9 @@
     <link type="text/css" rel="stylesheet" href="../web-archive/assets/web-archive.css" />
     <link rel="stylesheet" href="../assets/css/fonts.css">
 
+    <script data-goatcounter="https://pablo-energy.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
+
   </head>
 <body>
 
