--- a/sundaysites/practice/index.html
+++ b/sundaysites/practice/index.html
@@ -8,6 +8,9 @@
     <title>SundaySites · Practice</title>
     
     <link rel="stylesheet" href="assets/style.css" />
+
+    <script data-goatcounter="https://pablo-energy.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
   
   </head>
   <body>
