--- a/sunsets/index.html
+++ b/sunsets/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="stylesheet" href="assets/fonts.css">
+
+    <script data-goatcounter="https://pablo-energy.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
 </head>
 <body>
 
