--- a/more.html
+++ b/more.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Primary Meta Tags -->
-    <title>꒰ more ꒱</title>
+    <title>꒰ + ꒱</title>
     <meta name="title" content="Pablo Moreno">
     <meta name="description" content="Pablo Moreno is a young multidisciplinary graphic designer working between France and Spain.">
     <meta name="author" content="Pablo Moreno">
@@ -32,7 +32,20 @@
   <body style="background-color: gold;">
     
     
-    <div class="center">    
+    <div class="center"> 
+
+      <p>In september 2022 I started a double Master in UX/UI, thanks to the <a href="https://www.esad-amiens.fr/">ESAD</a> of Amiens and the <a href="https://www.utc.fr/">UTC</a> of Compiègne</p>
+
+      <p>This year I'm really motivated about making websites for people, for things, for fun... I have a lot of ideas that I'm working on! <a href="mailto:pablomoreno@proton.me">Tell me</a> if you are interested on making yours!</p>
+
+      <p>I'm reading a <a href="https://www.are.na/pablo-moreno/textes-sf-b1sgau1y">lot of articles</a> for my essay, and for the books, i'm on Madame Bovary, from french writter Flaubert.</p>   
+
+      <p>You can see <a href="/my-computer/">what I use on my computer</a> and visit my <a href="https://www.are.na/pablo-moreno">Are.na</a> !</p>
+
+      <p>See ya!</p>
+
+
+      <!-- 
     <table>
       <tr>
         <th>Pages</th>
@@ -50,9 +63,9 @@
         <td><a href="https://www.are.na/pablo-moreno">Are.na</a></td>
         <td><p>Life mind's tool</p></td>
       </tr>
-    </table>
+    </table> -->
 
-    <a href="index.html#second">⇠ Back</a>
+    <a href="index.html">⇠ Back</a>
   </div>
 
   <div id="screen-night">
