--- a/para-dani/index.html
+++ b/para-dani/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="assets/normalize.css">
 </head>
 <body>
+
+    <div class="mail">
+        <img id="top" src="assets/mail-top.png" alt="">
+        <img id="bottom" src="assets/mail-bottom.png" alt="">
+    </div>
     
     <div class="windows">
         <div>
