--- a/para-dani/index.html
+++ b/para-dani/index.html
@@ -11,10 +11,8 @@
 </head>
 <body>
 
-    <div class="mail">
         <img id="top" src="assets/mail-top.png" alt="">
         <img id="bottom" src="assets/mail-bottom.png" alt="">
-    </div>
     
     <div class="windows">
         <div>
@@ -25,11 +23,11 @@
         </div>
         <div>
             <p>- del concierto de Diaphan en la sala Taro, y el restaurante chino al que fuimos entre medias.</p>
-            <p>- cuando fuimos a Creixel el 23 de junio para San Juan, volviendo por Preixana :D</p>
+            <p>- cuando fuimos a Creixel el <i>23</i> de junio para San Juan, volviendo por Preixana :D</p>
             <img  id="dos" src="images/image2.JPG">
         </div>
         <div>
-            <p>- Cuando estuvimos allí por el pueblo, el partido de bádminton entre tÚ y yo en el campo del jefe.</p>
+            <p>- Cuando estuvimos allí por el pueblo, el partido de bádminton entre tú y yo en el campo del jefe.</p>
             <p> - de vuelta a Barcelona, el tallerlas calles que nos llevaban a él...</p>
             <img id="tres" src="images/image3.JPG">
         </div>
@@ -44,7 +42,7 @@
             <img id="cinco" src="images/image5.JPG">
         </div>
         <div>
-            <p>Tantas cosas en un sitio táN nuevo y divertido. Toda la gente que hemos conocido entre París y Barcelona...</p>
+            <p>Tantas cosas en un sitio tán nuevo y divertido. Toda la gente que hemos conocido entre París y Barcelona...</p>
             <img id="seis" src="images/image6.png">
         </div>
         <div>
@@ -56,6 +54,7 @@
             <img id="ocho" src="images/image8.JPG">
         </div>
     </div>
+
 
     <script id="script" src="assets/script.js"></script>
     
