--- a/para-dani/index.html
+++ b/para-dani/index.html
@@ -4,55 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Views</title>
+    <title>para el dani!</title>
 
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/normalize.css">
 </head>
 <body>
 
-        <img id="top" src="assets/mail-top.png" alt="">
-        <img id="bottom" src="assets/mail-bottom.png" alt="">
+        <div class="bottom">
+
+            <p id="abrir">Abriiiiiiiir!</p>
+
+            <p id="sender">Pablo Moreno //<br>
+                45 rue Guidé, appt. 310,<br>
+                80000 Amiens FRANCIA<br><br>
+                pablomoreno@proton.me</p>
+
+        </div>
     
     <div class="windows">
         <div>
             <p>Hola Dani, buenas noches!</p>
             <p>Estaba haciendo la colada y me decía que estaría bien tener el cartón que tenías en el taller para plegar las camis, porque tengo un montón (como 20!).</p>
-            <p>Asique me he acordado de Barcelona. Últimamente he estado con gente que quería visitarla, entonces me acordaba de nuevo de todas las cosas que hicimos en la zona:</p>
-            <img id="un" src="images/image1.JPG">
+            <p>Asique me he acordado de Barcelona. Últimamente he estado con gente que quería visitarla, entonces me acordaba de nuevo de todas las cosas que hicimos en esos meses:</p>
+            <span>1</span>
+            <img id="un" src="images/image1.JPG" alt="Siguiendo a Dani para ir a ver el ensayo.">
         </div>
         <div>
-            <p>- del concierto de Diaphan en la sala Taro, y el restaurante chino al que fuimos entre medias.</p>
+            <p>- el concierto de Diaphan en la sala Taro, y el restaurante chino al que fuimos entre medias.</p>
             <p>- cuando fuimos a Creixel el <i>23</i> de junio para San Juan, volviendo por Preixana :D</p>
-            <img  id="dos" src="images/image2.JPG">
+            <span>2</span>
+            <img  id="dos" src="images/image2.JPG" alt="Camiseta recién imprimida en serigrafía.">
         </div>
         <div>
             <p>- Cuando estuvimos allí por el pueblo, el partido de bádminton entre tú y yo en el campo del jefe.</p>
-            <p> - de vuelta a Barcelona, el tallerlas calles que nos llevaban a él...</p>
-            <img id="tres" src="images/image3.JPG">
+            <p> - de vuelta a Barcelona, el taller, las calles que nos llevaban a él...</p>
+            <span>3</span>
+            <img id="tres" src="images/image3.JPG" alt="Ventana de un proche donde se refleja el cielo azúl del verano en Preixana, Cataluña.">
         </div>
         <div>
             <p>- En casa, las cenas con Nabila (tengo que responderle a un mensaje encima)</p>
             <p>- Todas las personas de BCN (mucho muchacho también cuenta)</p>
+            <span>4</span>
             <video id="cuatro" src="images/image4.mp4" type="video/mp4" autoplay loop muted></video>
         </div>
         <div>
-            <p>- Cuando volvimos con tu ama y tu abu, y que habia un incendio en una ciudad al lado de la autopista, y que me dejasteis en Val de Bron (verifiacrr)</p>
-            <p>- Uuuuii y casi se me olvida pero cuando fuí allí para el Prat a por el exprimidor de naranjas jajaj, nose si lo tendrás por ahí hihihi.</p>
-            <img id="cinco" src="images/image5.JPG">
+            <p>- Cuando volvimos con tu ama y tu abu, y que habia un incendio en una ciudad al lado de la autopista, y que me dejasteis por allí por Pubilla Cases.</p>
+            <p>- Uuuuii y casi se me olvida pero cuando fuí allí para Sant Boi!!! a por el exprimidor de naranjas jajaj, que de echo necesitaría por aquí jiji</p>
+            <span>5</span>
+            <img id="cinco" src="images/image5.JPG" alt="Dani mirando las últimas verificaciones para imprimir la camiseta K.">
         </div>
         <div>
             <p>Tantas cosas en un sitio tán nuevo y divertido. Toda la gente que hemos conocido entre París y Barcelona...</p>
-            <img id="seis" src="images/image6.png">
+            <span>6</span>
+            <img id="seis" src="images/image7.JPG" alt="Dani, Aline y Pablo lavandose los dientes en una foto tomada en contra picado.">
         </div>
         <div>
-            <p>Y para terminar, te dejé un regalo allí en Barna, y es que te recomiendo (espero que no lo conozcas ya), el <a href="https://goo.gl/maps/SjsT255cRk7E8azLA">parque de Cervantes</a>, cerca del Val de Bron de echo, y a donde fuí en mi último día en la city. Parque de estilo un poco oriente medio, con rosales y palmeras!</p>
-            <img id="siete" src="images/image7.JPG">
+            <p>Y para terminar, te dejé un regalo allí en Barna (espero que no lo conozcas ya), es el <a href="https://goo.gl/maps/SjsT255cRk7E8azLA">parque de Cervantes</a>, cerca de la zona universitària de echo, y a donde fuí en mi último día en la city. Parque de estilo un poco oriente medio, con rosales y palmeras!</p>
+            <span>7</span>
+            <img id="siete" src="images/image6.png" alt="Dani con Nerea y el perrito en un camino.">
         </div>
         <div>
             <p>(la última vez  que pasé por París, pasé por tu antigua kel!)</p>
-            <img id="ocho" src="images/image8.JPG">
+            <span>fin!</span>
+            <img id="ocho" src="images/image8.JPG"
+             alt="Pablo en la plaza Voltaire, delante de la altigua puerta del apartamento del Dani.">
         </div>
+    </div>
+
+    <div class="firma">
+        <p>Dani espero que te haya gustado la carta! A ver si puedo ir a visitarte pronto! UN ABRAZO MUUUY GRANDE! 🐌</p>
     </div>
 
 
