--- a/my-computer/index.html
+++ b/my-computer/index.html
@@ -4,81 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>꒰ my computer ꒱</title>
-
- 
-      <style type="text/css">
-        body{
-
-          background-color: steelblue;
-          margin: 0;
-          padding: 0;
-          font-size: 110%;
-          font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-
-        .things {
-          background-color: snow;
-          margin: 10px 30px;
-          padding: 14px 50px 20px 14px;
-          width: fit-content;
-          height: fit-content;
-          position: relative;
-        }
-
-
-        details {
-    border: 1px solid #aaa;
-    border-radius: 4px;
-    padding: 0.5em 0.5em 0 0;
-    background-color: snow;
-    margin: 10px 30px;
-    width: fit-content;
-    height: fit-content;
-    position: relative;
-}
-
-summary {
-    font-weight: bold;
-    margin: -0.5em -0.5em 0 0;
-    padding: 1em;
-    width: 100%;
-}
-
-details[open] {
-  padding: 0.5em 2em 1.5em 0em;
-}
-
-details[open] summary {
-    border-bottom: 1px solid #aaa;
-    margin-bottom: 1em;
-}
-
-
-
-
-
-        h1{
-          margin: 24px 0 20px 30px;
-          font-size: 160%;
-          color: snow;
-          opacity: .4;
-        }
-
-        h2{
-          margin: 0px auto 15px auto;
-          font-size: 110%;
-          display: inline;
-        }
-
-        ul{
-          margin: 0;
-        }
-
-        span{
-          opacity: .5;
-          font-size: 90%;
-        }
-      </style>
+    <link type="text/css" rel="stylesheet" href="style.css" />
 
   </head>
 <body>
@@ -174,68 +100,69 @@ details[open] summary {
     <li>
       Custom extensions! <span>· go make yours!</span>
     </li>
-    </ul>
-  </details>
+  </ul>
+</details>
 
-    <details>
-      <summary><h2>iPhone tweaks</h2></summary>
-      <ul>
-        <li>
-          Activator <span>· gestures shortcut</span>
-        </li>
-        <li>
-          AlarmVolume <span>· alarm song at 100%</span>
-        </li>
-        <li>
-          Atria <span>· symetrical homescreen</span>
-        </li>
-        <li>
-          BetterCC <span>· custom ControlCenter</span>
-        </li>
-        <li>
-          CC On & Off <span>· true disable of WiFi and Bluetooth</span>
-        </li>
-        <li>
-          CCVibration <span>· disable vibration module</span>
-        </li>
-        <li>
-          ConfirmRotate <span>· ask before rotating!</span>
-        </li>
-        <li>
-          Date Picker Wheels <span>· old days date picker</span>
-        </li>
-        <li>
-          Grupi <span>· grouped notifications on LS</span>
-        </li>
-        <li>
-          iCaughtU <span>· help you finding your iPhone again</span>
-        </li>
-        <li>
-          Lynx2 <span>· system customizer</span>
-        </li>
-        <li>
-          Marker <span>· easy cursor</span>
-        </li>
-        <li>
-          Notif <span>· let notifications stay on LS</span>
-        </li>
-        <li>
-          Scribble <span>· unlock with a draw</span>
-        </li>
-        <li>
-          Sentinel <span>· turn off before 0%</span>
-        </li>
-        <li>
-          ShyNotifications <span>· don't wake up the screen on notifs</span>
-        </li>
-        <li>
-          Snapper 2 <span>· mini screenshots on top!</span>
-        </li>
-        <li>
-          SwipeExtenderX <span>· keyboard shortcuts</span>
-        </li>
-    
-        </ul>
+<details>
+  <summary><h2>iPhone tweaks</h2></summary>
+  <ul>
+    <span>From the most decisiveness to not</span><br><br>
+    <li>
+      Activator <span>· gestures shortcut</span>
+    </li>
+    <li>
+      Snapper 2 <span>· resizable screenshots on top!</span>
+    </li>
+    <li>
+      SwipeExtenderX <span>· keyboard shortcuts</span>
+    </li>
+    <li>
+      Marker <span>· easy cursor</span>
+    </li>
+    <li>
+      iCaughtU <span>· help you finding your iPhone again</span>
+    </li>
+    <li>
+      ConfirmRotate <span>· ask before rotating!</span>
+    </li>
+    <li>
+      ShyNotifications <span>· don't wake up the screen on notifs</span>
+    </li>
+    <li>
+      Sentinel <span>· turn off before 0%</span>
+    </li>
+    <li>
+      Scribble <span>· unlock with a draw</span>
+    </li>
+    <li>
+      CC On & Off <span>· true disable of WiFi and Bluetooth</span>
+    </li>
+    <li>
+      Notif <span>· let notifications stay on LS</span>
+    </li>
+    <li>
+      Grupi <span>· grouped notifications on LS</span>
+      </li>
+    <li>
+      Lynx2 <span>· system customizer</span>
+    </li>
+
+    <li>
+      AlarmVolume <span>· alarm song at 100%</span>
+    </li>
+    <li>
+      Atria <span>· symetrical homescreen</span>
+    </li>
+    <li>
+      BetterCC <span>· custom ControlCenter</span>
+    </li>
+    <li>
+      CCVibration <span>· disable vibration module</span>
+    </li>
+    <li>
+      Date Picker Wheels <span>· old days date picker</span>
+    </ul>
+
       </details>
   
 </body>
