--- a/pages.html
+++ b/pages.html
@@ -15,7 +15,7 @@
 <body>
 
    <ul>
-    <li><a href="/20-six-hour-a-day">20-six-hour-a-day</a></li>
+    <li><a href="/twenty-six-hour-a-day">twenty-six-hour-a-day</a></li>
     <li><a href="/autre-temps">autre-temps</a></li>
     <li><a href="/blog">blog</a></li>
     <li><a href="/carta-para-dani">carta-para-dani</a></li>
