--- a/twenty-six-hour-a-day/index.html
+++ b/twenty-six-hour-a-day/index.html
@@ -17,7 +17,8 @@
     <div class="theme"></div>
 
     <div class="rot">
-    <div id="player" class="video"></div>
+        <div class="round"></div>
+        <div id="player" class="video"></div>
     </div>
 
     <a id="link" href="https://www.youtube.com/@twenty-sixhoursaday">twenty-six-hour-a-day</a>
