--- a/sunday-sites/index.html
+++ b/sunday-sites/index.html
@@ -15,23 +15,14 @@
   </head>
 <body>
 
-  <div class="content">
-    <div class="second">
+
       <h1> Welcome to my user page<br> for
         <a href="https://sundaysites.cafe/">Sunday Sites</a></h1>
-      <table>
-      <tr>
-        <th>Date</th>
-        <th>Site</th>
-      </tr>
-      <tr>
-        <td>05/02/2023</td>
-        <td><p><a href="practice/">
-          A website about <u>practice</u></a></p></td>
-      </tr>
 
-    </table>
-  </div>
+        <ul>
+          <li><a href="/making-notes">making-notes</a></li>
+          <li><a href="/practice">practice</a></li>
+         </ul>
 </div>
 
 
