--- a/pages.html
+++ b/pages.html
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+    <h1>Pages from ꒰ pablo.energy ꒱</h1>
+
    <ul>
     <li><a href="/twenty-six-hour-a-day">twenty-six-hour-a-day</a></li>
     <li><a href="/autre-temps">autre-temps</a></li>
@@ -23,7 +25,7 @@
     <li><a href="/juliettaytristan">juliettaytristan</a></li>
     <li><a href="/kandp">k&p</a></li>
     <li><a href="/my-computer">my-computer</a></li>
-    <li><a href="/sundaysites">sundaysites</a></li>
+    <li><a href="/sunday-sites">sunday-sites</a></li>
     <li><a href="/sunsets/">sunsets/</a></li>
     <li><a href="/voeux2021/">voeux2021/</a></li>   
    </ul>
