--- a/sunday-sites/index.html
+++ b/sunday-sites/index.html
@@ -20,8 +20,8 @@
         <a href="https://sundaysites.cafe/">Sunday Sites</a></h1>
 
         <ul>
-          <li><a href="/making-notes">making-notes</a></li>
-          <li><a href="/practice">practice</a></li>
+          <li><a href="/sunday-sites/making-notes">making-notes</a></li>
+          <li><a href="/sunday-sites/practice">practice</a></li>
          </ul>
 </div>
 
