--- a/pages.html
+++ b/pages.html
@@ -26,8 +26,9 @@
     <li><a href="/kandp">k&p</a></li>
     <li><a href="/my-computer">my-computer</a></li>
     <li><a href="/sunday-sites">sunday-sites</a></li>
-    <li><a href="/sunsets/">sunsets/</a></li>
-    <li><a href="/voeux2021/">voeux2021/</a></li>   
+    <li><a href="/sunsets/">sunsets</a></li>
+    <li><a href="/voeux2021/">voeux2021</a></li>   
+    <li><a href="/objets-bg/">objets-bg</a></li>   
    </ul>
     
 </body>
