--- a/objets-bg/index.html
+++ b/objets-bg/index.html
@@ -7,6 +7,7 @@
     <title>BG</title>
 
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/mobile.css">
 </head>
 <body>
 
@@ -38,6 +39,7 @@
     <button onclick="createBonnet1()">Bonnet 1</button>
     <button onclick="createBonnet2()">Bonnet 2</button>
     <button onclick="createBonnet3()">Bonnet 3</button>
+    <button onclick="createBizarre()">Truc bizarre</button>
     <button onclick="createBuste()">Buste</button>
     <button onclick="createBuzbu()">Buzbulajh</button>
     <button onclick="createCafe()">Super café</button>
