--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <a href="https://vimeo.com/793921849">
         <img src="projects-show/jpo-julie.png">
-        <small><span>Web</span> Animation for the open days</small>
+        <small><span>3D</span> Animation for the open days</small>
       </a>
 
       <a href="https://vivirsinti-libro.com/">
