--- a/objets-bg/index.html
+++ b/objets-bg/index.html
@@ -11,59 +11,63 @@
 </head>
 <body>
 
-    <!-- <div class="intro">
-        <p>Dwfrf</p>
-
-        <span class="enter buttonBig">commencer</span>
-        <img src="assets/logo-BG.png" alt="An elipsis with an inscription BG in the middle" id="back" class="back2">
-    </div> -->
 
     <div class="outro outroBack">
-        <p>EWFWEFEFWEF</p>
+        <p>Vous avez pour <span id="route">?</span>  de voyage, détendez vous et profitez des vues...</p>
 
         <div>
-            <span class="restart buttonBig">recommencer</span>
-            <span class="replay buttonBig">reprendre</span>
+            <span class="restart buttonBig">Рестартирам (<i>recommencer</i>)</span>
+            <span class="replay buttonBig">продължи (<i>continuer</i>)</span>
         </div>
+
+        <div id="monex">Par ailleurs le coût du voyage sera de <u id="levax">0</u> (лв), à régler à la sortie...</div>
+
+
         <img src="assets/logo-BG.png" alt="An elipsis with an inscription BG in the middle" id="back" class="back2">
     </div>
 
+    <!-- <div class="readme">
+
+    </div> -->
+
     <div class="buttons">
-    <button onclick="credits()" id="credits">Objets de Bulgarie:</button>
-    <button onclick="createHyundai()">Hyundai Jérémie</button>
+    <button id="credits">Objets de Bulgarie:</button>
+    <button id="readme" class="hide"> <span class="vert">Предмети от България:</span> Ce site fait partie de l'exposition <span class="red">Un tour de Bulgarie maximum overdrive, manger rouler manger dormir peu feter beaucoup chauffer de l'eau manger de la neige et avoir plein d'énergie.</span> Comme un outil de préparation d'un voyage, de collection pendant le voyage ou souvenirs une fois arrivé·es, ce site-jeu veut nous rapeller le temps passé en Bulgarie et toutes les choses qu'on a pu faire en trop peu de temps. Merci Liliana pour cette ce temps encapsulé en 5 jours qui paru beaucoup +.         
+    <span class="vert">Imaginé et codé par <a href="https://pablo.energy" target="_blank">Pablo Moreno</a> en mars 2023.</span></button>
+    
     <button onclick="create160()">160</button>
     <button onclick="createAlbert1()">Albert 1</button>
     <button onclick="createAlbert2()">Albert 2</button>
-    <button onclick="createAquarium()">Tableau poissons</button>
-    <button onclick="createArsloun()">Dessin intime A.</button>
+    <button onclick="createMarta()">Baba Marta</button>
     <button onclick="createBonnet1()">Bonnet 1</button>
     <button onclick="createBonnet2()">Bonnet 2</button>
     <button onclick="createBonnet3()">Bonnet 3</button>
-    <button onclick="createBizarre()">Truc bizarre</button>
     <button onclick="createBuste()">Buste</button>
     <button onclick="createBuzbu()">Buzbulajh</button>
-    <button onclick="createCafe()">Super café</button>
     <button onclick="createCheval()">Cheval</button>
-    <button onclick="createDegrad()">Tag CO</button>
-    <button onclick="createDejeuner()">Pain deujener</button>
+    <button onclick="createArsloun()">Dessin A.</button>
     <button onclick="createDrapeau1()">Drapeau 1</button>
     <button onclick="createDrapeau2()">Drapeau 2</button>
-
     <button onclick="createEglise()">Eglise</button>
     <button onclick="createFlixbus()">Flixbus</button>
     <button onclick="createGraff()">Graff</button>
+    <button onclick="createBizarre()">Homme-chèvre</button>
+    <button onclick="createHyundai()">Hyundai Jérémie</button>
     <button onclick="createJacuzzi()">Jacuzzi</button>
     <button onclick="createLivre()">Livre</button>
     <button onclick="createLumiere()">Lumiere</button>
-    <button onclick="createMarta()">Marta</button>
-    <button onclick="createMonastere()">Monastère</button>
+    <button onclick="createMonastere()">Monastère de Rila</button>
     <button onclick="createMonnaie()">Monnaie</button>
+    <button onclick="createDejeuner()">Pain déjeuner</button>
     <button onclick="createPhotographe()">Photographe</button>
     <button onclick="createPoisson()">Poisson</button>
     <button onclick="createPomme()">Pomme</button>
     <button onclick="createPub()">Pub</button>
     <button onclick="createSaucisse()">Saucisse</button>
+    <button onclick="createCafe()">Super café</button>
     <button onclick="createStatue()">Statue</button>
+    <button onclick="createAquarium()">Tableau poissons</button>
+    <button onclick="createDegrad()">Tag CO</button>
     <button onclick="createVoiture()">Voiture</button>
 
     </div>
@@ -72,8 +76,8 @@
     </div>
 
     <div class="calculs">
-        <span id="nece">Temps nécessaire -> <span id="hours">zéro</span> h</span>
-        <span id="lancer" class="hide">Lancer l'aventure</span>
+        <span id="nece">Temps cumulé -> <span id="hours">0</span>h</span>
+        <span id="lancer" class="hide">Commencer le voyage</span>
     </div>
 
 
