--- a/pages.html
+++ b/pages.html
@@ -27,6 +27,7 @@
     <li><a href="/my-computer">my-computer</a></li>
     <li><a href="/sunday-sites">sunday-sites</a></li>
     <li><a href="/sunsets/">sunsets</a></li>
+    <li><a href="/lyrics/">lyrics</a></li>
     <li><a href="/voeux2021/">voeux2021</a></li>   
     <li><a href="/objets-bg/">objets-bg</a></li>   
    </ul>
