--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -14,30 +14,33 @@
 
     <div class="blocks">
 
-        <div class="block">
-            <a href="songs/earl_wins.html">
+        <a href="songs/earl_wins.html">
+            <div class="block">
                 <h2>Eark Sweatshirt</h2>
                 <h3>Wind in my sails</h3>
-            </a>
-        </div>
+            </div>
+        </a>
 
-        <div class="block">
-            <a href="songs/knxwledge-bmm">
+        <a href="songs/knxwledge-bmm.html">
+            <div class="block">
                 <h2>Knxwledge</h2>
                 <h3>Blowmymnd</h3>
-            </a>
-        </div>
+            </div>
+        </a>
 
-        <div class="block">
-            <a href="songs/iam-dcl">
+        <a href="songs/iam-dcl.html">
+            <div class="block">
                 <h2>IAM</h2>
                 <h3>Demain c'est loin</h3>
-            </a>
-        </div>
+            </div>
+        </a>
 
     </div>
 
     <div id="credits"><a href="https://pablo.energy">pablo</a>'s collection of songs lyrics.</div>
+
+    <script id="script" src="script.js"></script>
+
 </body>
 
 </html>
