--- a/lyrics/songs/earl_wins.html
+++ b/lyrics/songs/earl_wins.html
@@ -68,29 +68,32 @@
 
         <div class="mini-blocks">
 
-            <div class="mini-block">
-                <a href="../index.html">
+            <a href="../index.html">
+                <div class="mini-block">
                     <h2>← index</h2>
-                </a>
-            </div>
+                </div>
+            </a>
 
-            <div class="mini-block">
-                <a href="knxwledge-bmm">
+            <a href="knxwledge-bmm.html">
+                <div class="mini-block">
                     <h2>Knxwledge</h2>
                     <h3>Blowmymnd</h3>
-                </a>
-            </div>
+                </div>
+            </a>
 
-            <div class="mini-block">
-                <a href="iam-dcl">
+            <a href="iam-dcl.html">
+                <div class="mini-block">
                     <h2>IAM</h2>
                     <h3>Demain c'est loin</h3>
-                </a>
-            </div>
+                </div>
+            </a>
 
         </div>
 
     </div>
+
+    <script id="script" src="../script.js"></script>
+
 
 </body>
 
