--- a/bg/index.html
+++ b/bg/index.html
@@ -84,6 +84,9 @@
 
     <script id="script" src="assets/script.js"></script>
 
+    <audio id="jeremotor" src="jeremotor.m4a" preload="auto"></audio>
+    <audio id="magic" src="magic.m4a" preload="auto"></audio>
+
     <img src="assets/logo-BG.png" alt="An elipsis with an inscription BG in the middle" id="back">
     
 </body>
