--- a/pages.html
+++ b/pages.html
@@ -29,7 +29,7 @@
     <li><a href="/sunsets/">sunsets</a></li>
     <li><a href="/lyrics/">lyrics</a></li>
     <li><a href="/voeux2021/">voeux2021</a></li>   
-    <li><a href="/objets-bg/">objets-bg</a></li>   
+    <li><a href="/bg/">bg</a></li>   
    </ul>
     
 </body>
