--- a/bg/index.html
+++ b/bg/index.html
@@ -13,7 +13,7 @@
 
 
     <div class="outro outroBack">
-        <p>Vous avez pour <span id="route">?</span> de voyage, servez-vous un punch, prenez quelques stickers et profitez des vues...</p>
+        <p>Vous avez pour <span id="route">?</span> de voyage, servez-vous un punch et profitez du moteur JB, toujours aussi endurant... </p>
 
         <div>
             <span class="restart buttonBig">Рестартирам (<i>recommencer</i>)</span>
