--- a/bg/index.html
+++ b/bg/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BG</title>
+    <title>BulGarie</title>
 
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/mobile.css">
@@ -20,7 +20,7 @@
             <span class="replay buttonBig">продължи (<i>continuer</i>)</span>
         </div>
 
-        <div id="monex">Par ailleurs le coût du voyage sera de <u id="levax">0</u> (лв), à régler à la sortie...</div>
+        <div id="monex">Par ailleurs le coût du voyage sera de <u id="levax">0</u> (лв), à régler directement au conducteur</div>
 
 
         <img src="assets/logo-BG.png" alt="An elipsis with an inscription BG in the middle" id="back" class="back2">
