--- a/bg/index.html
+++ b/bg/index.html
@@ -20,7 +20,7 @@
             <span class="replay buttonBig">продължи (<i>continuer</i>)</span>
         </div>
 
-        <div id="monex">Par ailleurs le coût du voyage sera de <u id="levax">0</u> (лв), à régler directement au conducteur</div>
+        <div id="monex">Par ailleurs le coût du voyage sera de <u id="levax">0</u> (лв), à régler directement au conducteur.</div>
 
 
         <img src="assets/logo-BG.png" alt="An elipsis with an inscription BG in the middle" id="back" class="back2">
