--- a/bg/index.html
+++ b/bg/index.html
@@ -52,7 +52,7 @@
     <button onclick="createFlixbus()">Flixbus</button>
     <button onclick="createGraff()">Graff</button>
     <button onclick="createBizarre()">Homme-chèvre</button>
-    <button onclick="createHyundai()">Hyundai Jérémie</button>
+    <button onclick="createHyundai()">Hyundai Jérémy</button>
     <button onclick="createJacuzzi()">Jacuzzi</button>
     <button onclick="createLivre()">Livre</button>
     <button onclick="createLumiere()">Lumiere</button>
