--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -16,7 +16,7 @@
 
         <a href="songs/earl_wins.html">
             <div class="block">
-                <h2>Eark Sweatshirt.</h2>
+                <h2>Eark Sweatshirt</h2>
                 <h3>Wind in my sails</h3>
             </div>
         </a>
