--- a/pages/index.html
+++ b/pages/index.html
@@ -39,7 +39,8 @@
 
             <form name="form">
                 <input id="texte" type='text' name='texte' placeholder="PROMO CODE" onkeypress="password(event)" />
-                <button id="button" name="submit">Submit</button>
+                <input id="button" type="button" onclick="password();" value="Submit">
+                
             </form>
 
         </div>
