--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <form name="form">
-                <input id="texte" type='text' name='texte' placeholder="PROMO CODE" onkeypress="password(event)" />
+                <input id="texte" type='text' name='texte' placeholder="PROMO CODE"/>
                 <input id="button" type="button" onclick="password();" value="Submit">
                 
             </form>
