--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Primary Meta Tags -->
-  <title>꒰ pablo moreno ꒱</title>
+  <title>pablo.⚡️</title>
   <meta name="title" content="Pablo Moreno">
   <meta name="description"
     content="Pablo Moreno is a young multidisciplinary graphic designer working between France and Spain.">
