--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Primary Meta Tags -->
-  <title>pablo.⚡️</title>
+  <title>pablo.energy</title>
   <meta name="title" content="Pablo Moreno">
   <meta name="description"
     content="Pablo Moreno is a young multidisciplinary graphic designer working between France and Spain.">
@@ -38,11 +38,11 @@
 <body>
 
   <div class="menu">
-      <div id="circle"></div>
-      <span>Giving ⚡️ to the 🌍</span>
-    </div>
+    <a href="" id="circle"><img src="assets/me.jpg" id="meCircle"></img></a>
+    <span id="whatNew">pablo giving ⚡️</span>
+  </div>
 
-    <!-- <div class="right"> <img src="assets/me.jpg"         alt="Picture of Pablo Moreno smiling, in his room in Bilbao, Spain"></img></div> -->
+  <!-- <div class="right"> <img src="assets/me.jpg"         alt="Picture of Pablo Moreno smiling, in his room in Bilbao, Spain"></img></div> -->
 
   <div class="screen-home nonight">
 
@@ -67,7 +67,7 @@
             I'm Pablo Moreno, a young multidisciplinary graphic designer, studying in France and working down to Bilbao.
           </p>
           <img src="assets/me.jpg" style="width: 100px; height: 100px;"
-            alt="Picture of Pablo Moreno smiling, in his room in Bilbao, Spain"></img>
+            alt="Picture of Pablo Moreno smiling, in his room in Bilbao, Spain" id="app"></img>
         </div>
         <div class="card-contact">
           <a onclick="copyMail()" rel="me">E-mail</a>
@@ -77,64 +77,153 @@
       <div id="mailcopied">email copied!</div>
     </div>
   </div>
-<!-- 
+
+
   <div class="nonight second" id="second">
 
-    <a href="https://vimeo.com/793921849">
-      <img src="projects-show/jpo-julie.png">
-      <small><span>3D</span> Animation for the open days</small>
-    </a>
+    <div class="now">
+      <h2>What I'm doing lately?</h3>
 
-    <a href="https://vivirsinti-libro.com/">
-      <img src="projects-show/vivir-sin-ti.png">
-      <small><span>Web</span> Book presentation</small>
-    </a>
+        <p>In september 2022 I started a double Master in UX/UI, train-ing between to the <a
+            href="https://www.esad-amiens.fr/">ESAD</a> of Amiens and the <a href="https://www.utc.fr/">UTC</a> of
+          Compiègne.</p>
 
-    <a href="https://pablo-archi.online">
-      <img src="projects-show/pablo-archipng.png">
-      <small><span>Web</span> For my CGI work</small>
-    </a>
+        <p>This year I'm really motivated about making websites for people, for things, for fun... I have a lot of ideas
+          that I'm working on! <a href="mailto:pablomoreno@proton.me">Tell me</a> if you are interested on making yours!
+        </p>
 
-    <a href="https://pablo.energy/glace-sans-tain/">
-      <img src="projects-show/glace-sans-tain.png">
-      <small><span>Web</span> My essay "Glace sans tain"</small>
-    </a>
+        <p>I'm reading a <a href="https://www.are.na/pablo-moreno/textes-sf-b1sgau1y">lot of articles</a> for my essay, and for more "fun" litterature i'm reading a book about Khomeini.</p>
 
-    <a href="https://soyjuanmoreno.com/">
-      <img src="projects-show/juan-moreno.png">
-      <small><span>Web</span> Economist site</small>
-    </a>
+        <p>You can see <a href="/my-computer/">what I use on my computer</a> or visit my <a
+            href="https://www.are.na/pablo-moreno">Are.na</a> !</p>
 
-    <a href="https://morenoarquitecto.com/">
-      <img src="projects-show/moreno-arquitecto.png">
-      <small><span>Web</span> Architecture studio</small>
-    </a>
+        <p>See ya!</p>
+        <p style="transform: rotate(-3deg);margin:-5px 0 0 10px">pablo ⚡️</p>
+    </div>
 
 
+    <div class="projects">
 
-    <a href="https://vimeo.com/675012283">
-      <img src="projects-show/copa-decantadora.png">
-      <small><span>3D</span> Wine product show</small>
-    </a>
+      <h3>Websites</h3>
 
-    <a href="https://andreaguilera.com/">
-      <img src="projects-show/andrea-aguilera.png">
-      <small><span>Web</span> Photographer Andrea Aguilera</small>
-    </a>
+      <a href="https://concluded-openspaces.netlify.app/" class="wip">
+        <div>
+          <img src="projects-show/concluded.png">
+          <small>Concluded Openspaces</small>
+        </div>
+        <span>[wip]</span>
+      </a>
+
+      <a href="https://calendarie2023.netlify.app/" class="wip">
+        <div>
+          <img src="projects-show/calendarie1.png">
+          <small>Calendarie 2023</small>
+        </div>
+        <span>[wip]</span>
+      </a>
+
+      <a href="https://3-words-for.eu/" class="wip">
+        <div>
+          <img src="projects-show/3words.png">
+          <small>3 words 4 europe </small>
+        </div>
+        <span>[wip]</span>
+
+      </a>
+
+      <a href="https://vivirsinti-libro.com/">
+        <div><img src="projects-show/vivir-sin-ti.png">
+          <small>Vivir sin tí book</small>
+        </div>
+      </a>
+
+      <a href="https://pablo-archi.online">
+        <div><img src="projects-show/pablo-archipng.png">
+          <small>Pablo Virtualisations</small>
+        </div>
+      </a>
+
+      <a href="https://pablo.energy/glace-sans-tain/">
+        <div><img src="projects-show/glace-sans-tain.png">
+          <small>"Glace sans tain" essay</small>
+        </div>
+      </a>
+
+      <!-- <a href="https://soyjuanmoreno.com/">
+        <div><img src="projects-show/juan-moreno.png">
+        <small>Juan Moreno's</small>
+        </div>
+      </a> -->
+
+      <a href="https://morenoarquitecto.com/">
+        <div><img src="projects-show/moreno-arquitecto.png">
+          <small>Moreno Arquitecto studio's</small>
+        </div>
+      </a>
 
 
-    <a href="https://vimeo.com/678345388">
-      <img src="projects-show/tribut-cafe.png">
-      <small><span>3D</span> Animation from a plant</small>
-    </a>
+      <!-- <a href="https://andreaguilera.com/">
+        <div><img src="projects-show/andrea-aguilera.png">
+        <small>Andrea Aguilera's</small>
+        </div>
+      </a> -->
 
 
-    <a href="https://pablo.energy/voeux2021/">
-      <img src="projects-show/voeux-2021.png">
-      <small><span>Web</span> New year card website</small>
-    </a>
+      <a href="https://pablo.energy/voeux2021/">
+        <div><img src="projects-show/voeux-2021.png">
+          <small>2021 new year card</small>
+        </div>
+      </a>
 
-  </div> -->
+
+
+      <h3>3D animation</h3>
+
+
+      <a href="https://vimeo.com/678345388">
+        <div><img src="projects-show/tribut-cafe.png">
+          <small>Coffe plant animation</small>
+        </div>
+      </a>
+
+      <a href="https://vimeo.com/675012283">
+        <div><img src="projects-show/copa-decantadora.png">
+          <small>Wine product show</small>
+        </div>
+      </a>
+
+      <a href="https://vimeo.com/793921849">
+        <div><img src="projects-show/jpo-julie.png">
+          <small>Open Days of ESAD (proposition)</small>
+        </div>
+      </a>
+
+      <h3>✢ things</h3>
+
+      <div class="others">
+        <a href="https://vimeo.com/678345324"><img src="projects-show/more/t_anthropocene.png">
+          <a href="projects-show/more/t_borges-estienne.jpg"><img src="projects-show/more/t_borges-estienne.jpg"></a>
+          <a href="projects-show/more/t_cimetiere-graville.jpg"><img
+              src="projects-show/more/t_cimetiere-graville.jpg"></a>
+          <a href="projects-show/more/t_dissuation-nucleaire.png"><img
+              src="projects-show/more/t_dissuation-nucleaire.png"></a>
+          <a href="projects-show/more/t_doom-day.jpg"><img src="projects-show/more/t_doom-day.jpg"></a>
+          <a href="projects-show/more/t_esadhar-books.jpg"><img src="projects-show/more/t_esadhar-books.jpg"></a>
+          <a href="https://vimeo.com/686388410"><img src="projects-show/more/t_glace-sans-tain.webp"></a>
+          <a href="https://vimeo.com/793921665"><img src="projects-show/more/t_ketamina.png"></a>
+          <a href="projects-show/more/t_more-things.webp"><img src="projects-show/more/t_more-things.webp"></a>
+          <a href="https://vimeo.com/678350239"><img src="projects-show/more/t_paysages-vagues.JPG"></a>
+          <a href="https://vimeo.com/678345423"><img src="projects-show/more/t_souvenirs-abrupts.jpg"></a>
+          <a href="projects-show/more/t_tramway.jpg"><img src="projects-show/more/t_tramway.jpg"></a>
+      </div>
+
+
+
+
+
+    </div>
+
+  </div>
 
   <div id="screen-night">
     <p>♻️ → 💤 → 🌞</p>
